...
            <!--q2-->
            <LinearLayout
                android:id="@+id/squestion2Layout"
                android:layout_marginLeft="5sp"
                android:layout_marginRight="5sp"
...
                    android:orientation="horizontal"
                    android:layout_marginTop="10dp"
                    android:id="@+id/squestion2radioGroup">

                    <RadioButton
...
                        android:layout_height="wrap_content"
                        android:text="@string/general_no"
                        android:id="@+id/squestion2radioButtonNo" />
                </RadioGroup>
            </LinearLayout>
...
            <!--q3-->
            <LinearLayout
                android:id="@+id/squestion3Layout"
                android:layout_marginLeft="5sp"
                android:layout_marginRight="5sp"
...
                    android:orientation="horizontal"
                    android:layout_marginTop="10dp"
                    android:id="@+id/squestion3radioGroup">

                    <RadioButton
...
                        android:layout_height="wrap_content"
                        android:text="@string/general_no"
                        android:id="@+id/squestion3radioButtonNo" />
                </RadioGroup>
            </LinearLayout>
...
            <!--q6-->
            <LinearLayout
                android:id="@+id/squestion6Layout"
                android:layout_marginLeft="5sp"
                android:layout_marginRight="5sp"
...
                    android:orientation="horizontal"
                    android:layout_marginTop="10dp"
                    android:id="@+id/squestion6radioGroup">

                    <RadioButton
...
                        android:layout_height="wrap_content"
                        android:text="@string/general_no"
                        android:id="@+id/squestion6radioButtonNo" />
                </RadioGroup>
            </LinearLayout>
...
            <!--q9-->
            <LinearLayout
                android:id="@+id/squestion9Layout"
                android:layout_marginLeft="5sp"
                android:layout_marginRight="5sp"
...
                    android:orientation="horizontal"
                    android:layout_marginTop="10dp"
                    android:id="@+id/squestion9radioGroup">

                    <RadioButton
...
                        android:layout_height="wrap_content"
                        android:text="@string/general_no"
                        android:id="@+id/squestion9radioButtonNo" />
                </RadioGroup>
            </LinearLayout>
...
            <!--q10-->
            <LinearLayout
                android:id="@+id/squestion10Layout"
                android:layout_marginLeft="5sp"
                android:layout_marginRight="5sp"
...
                    android:orientation="horizontal"
                    android:layout_marginTop="10dp"
                    android:id="@+id/squestion10radioGroup">

                    <RadioButton
...
                        android:layout_height="wrap_content"
                        android:text="@string/general_no"
                        android:id="@+id/squestion10radioButtonNo" />
                </RadioGroup>
            </LinearLayout>
...
            <!--q11-->
            <LinearLayout
                android:id="@+id/squestion11Layout"
                android:layout_marginLeft="5sp"
                android:layout_marginRight="5sp"
...
                    android:orientation="horizontal"
                    android:layout_marginTop="10dp"
                    android:id="@+id/squestion11radioGroup">

                    <RadioButton
...
                        android:layout_height="wrap_content"
                        android:text="@string/general_no"
                        android:id="@+id/squestion11radioButtonNo" />
                </RadioGroup>
            </LinearLayout>
...
            <!--q12-->
            <LinearLayout
                android:id="@+id/squestion12Layout"
                android:layout_marginLeft="5sp"
                android:layout_marginRight="5sp"
...
                    android:orientation="horizontal"
                    android:layout_marginTop="10dp"
                    android:id="@+id/squestion12radioGroup">

                    <RadioButton
...
                        android:layout_height="wrap_content"
                        android:text="@string/general_no"
                        android:id="@+id/squestion12radioButtonNo" />
                </RadioGroup>
            </LinearLayout>
...
            <!--q13-->
            <LinearLayout
                android:id="@+id/squestion13Layout"
                android:layout_marginLeft="5sp"
                android:layout_marginRight="5sp"
...
                    android:orientation="horizontal"
                    android:layout_marginTop="10dp"
                    android:id="@+id/squestion13radioGroup">

                    <RadioButton
...
                        android:layout_height="wrap_content"
                        android:text="@string/general_no"
                        android:id="@+id/squestion13radioButtonNo" />
                </RadioGroup>
            </LinearLayout>
...
            <!--q14-->
            <LinearLayout
                android:id="@+id/squestion14Layout"
                android:layout_marginLeft="5sp"
                android:layout_marginRight="5sp"
...
                    android:orientation="horizontal"
                    android:layout_marginTop="10dp"
                    android:id="@+id/squestion14radioGroup">

                    <RadioButton
...
                        android:layout_height="wrap_content"
                        android:text="@string/general_no"
                        android:id="@+id/squestion14radioButtonNo" />
                </RadioGroup>
            </LinearLayout>
...
            <!--q15-->
            <LinearLayout
                android:id="@+id/squestion15Layout"
                android:layout_marginLeft="5sp"
                android:layout_marginRight="5sp"
...
                    android:orientation="horizontal"
                    android:layout_marginTop="10dp"
                    android:id="@+id/squestion15radioGroup">

                    <RadioButton
...
                        android:layout_height="wrap_content"
                        android:text="@string/general_no"
                        android:id="@+id/squestion15radioButtonNo" />
                </RadioGroup>
            </LinearLayout>
...
            <!--q16-->
            <LinearLayout
                android:id="@+id/squestion16Layout"
                android:layout_marginLeft="5sp"
                android:layout_marginRight="5sp"
...
                    android:orientation="horizontal"
                    android:layout_marginTop="10dp"
                    android:id="@+id/squestion16radioGroup">

                    <RadioButton
...
                        android:layout_height="wrap_content"
                        android:text="@string/general_no"
                        android:id="@+id/squestion16radioButtonNo" />
                </RadioGroup>
            </LinearLayout>
...
            <!--q18-->
            <LinearLayout
                android:id="@+id/squestion18Layout"
                android:layout_marginLeft="5sp"
                android:layout_marginRight="5sp"
...
                    android:orientation="horizontal"
                    android:layout_marginTop="10dp"
                    android:id="@+id/squestion18radioGroup">

                    <RadioButton
...
                        android:layout_height="wrap_content"
                        android:text="@string/general_no"
                        android:id="@+id/squestion18radioButtonNo" />
                </RadioGroup>
            </LinearLayout>
...
            <!--q19-->
            <LinearLayout
                android:id="@+id/squestion19Layout"
