...

    <LinearLayout
        android:id="@+id/layoutFPInfoForm"
        android:orientation="vertical"
        android:layout_centerVertical="true"
...
        android:layout_height="wrap_content">

        <LinearLayout android:id="@+id/marriageDateLayout"
            android:layout_marginLeft="5sp"
            android:layout_marginRight="5sp"
...

            <EditText
                android:id="@+id/editTextFPMarriageDate"
                android:layout_width="110sp"
                android:layout_marginTop="10sp"
...

        <LinearLayout
            android:id="@+id/fpStartupSonDaughterNumLayout"
            android:layout_marginLeft="5sp"
            android:layout_marginRight="5sp"
...
                android:layout_height="wrap_content"
                android:background="@drawable/edittext_round"
                android:id="@+id/editTextFPSonNum"
                android:paddingLeft="2sp"
                android:inputType="number"
...
                android:layout_height="wrap_content"
                android:background="@drawable/edittext_round"
                android:id="@+id/editTextFPDaughterNum"
                android:paddingLeft="2sp"
                android:inputType="number"
...
        </LinearLayout>

        <LinearLayout android:id="@+id/fpAgeLastChild"
            android:layout_marginLeft="5sp"
            android:layout_marginRight="5sp"
...
                android:layout_height="wrap_content"
                android:background="@drawable/edittext_round"
                android:id="@+id/editTextFPLastChildYear"
                android:paddingLeft="2sp"
                android:inputType="number"
...
                android:layout_marginLeft="15sp"
                android:background="@drawable/edittext_round"
                android:id="@+id/editTextFPLastChildMonth"
                android:paddingLeft="2sp"
                style="@style/styleEdittext"
...
        </LinearLayout>-->

        <LinearLayout android:id="@+id/lastDeliveryLayout"
            android:layout_marginLeft="5sp"
            android:layout_marginRight="5sp"
...

            <EditText
                android:id="@+id/editTextFPLastDeliveryDate"
                android:layout_width="110sp"
                android:layout_marginTop="10sp"
...

        <LinearLayout
            android:id="@+id/fpStartupLmpLayout"
            android:layout_marginLeft="5sp"
            android:layout_marginRight="5sp"
...

            <EditText
                android:id="@+id/editTextFPLmpDate"
                android:layout_width="110sp"
                android:layout_marginLeft="5sp"
...

            <ImageButton
                android:id="@+id/imageButtonFpInfoLmpDate"
                android:layout_marginLeft="3sp"
                android:layout_marginTop="5sp"
...
        </LinearLayout>

        <LinearLayout android:id="@+id/fpStartupIsPregnantLayout"
            android:layout_marginLeft="5sp"
            android:layout_marginRight="5sp"
...

            <RadioGroup
                android:id="@+id/fpIsPregnantRadioGroup"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
...

                <RadioButton
                    android:id="@+id/radioFpInfoIsPregnantNo"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
...
        </LinearLayout>

        <LinearLayout android:id="@+id/fpCycleLayout"
            android:layout_marginLeft="5sp"
            android:layout_marginRight="5sp"
...
                android:textColor="@color/text_color"/>
            <RadioGroup
                android:id="@+id/fpCycleRadioGroup"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
...

                <RadioButton
                    android:id="@+id/radioFpCycleRegular"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
...
        </LinearLayout>

        <LinearLayout android:id="@+id/fpCycleDurationLayout"
            android:layout_marginLeft="5sp"
            android:layout_marginRight="5sp"
...
                android:layout_height="wrap_content"
                android:background="@drawable/edittext_round"
                android:id="@+id/editTextFpCycleDuration"
                android:inputType="number"
                android:maxLength="2"
...
        </LinearLayout>

        <LinearLayout android:id="@+id/fpMenstrualAmountLayout"
            android:layout_marginLeft="5sp"
            android:layout_marginRight="5sp"
...
                android:textColor="@color/text_color"/>
            <RadioGroup
                android:id="@+id/fpMenstrualAmountRadioGroup"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
...

                <RadioButton
                    android:id="@+id/radioFpMenstrualAmountNormal"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
...
        </LinearLayout>

        <LinearLayout android:id="@+id/fpMenstrualPainLayout"
            android:layout_marginLeft="5sp"
            android:layout_marginRight="5sp"
...
                android:textColor="@color/text_color"/>
            <RadioGroup
                android:id="@+id/fpMenstrualPainRadioGroup"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
...

                <RadioButton
                    android:id="@+id/radioFpMenstrualPain_no"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
...
        </LinearLayout>

        <LinearLayout android:id="@+id/hasCurrentMethodLayout"
            android:layout_marginLeft="5sp"
            android:layout_marginRight="5sp"
...

            <RadioGroup
                android:id="@+id/radioGroupHasCurrentMethod"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
...

                <RadioButton
                    android:id="@+id/radioFpHasCurrentMethod_yes"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
...
        </LinearLayout>

        <LinearLayout android:id="@+id/fpStartupMethodLayout"
            android:layout_marginLeft="5sp"
            android:layout_marginRight="5sp"
...
                android:textColor="@color/text_color"/>
            <Spinner
                android:id="@+id/spinnerMethodFPStartup"
                android:inputType="text"
                android:textSize="20sp"
...
    </LinearLayout>

    <LinearLayout android:id="@+id/fpStartupVisitReasonLayout"
        android:layout_marginLeft="5sp"
        android:layout_marginRight="5sp"
...
            android:textColor="@color/text_color"/>
        <Spinner
            android:id="@+id/spinnerFPVisitReasons"
            android:inputType="text"
            android:textSize="20sp"
...
            android:layout_height="wrap_content"
            android:text="Next"
            android:id="@+id/buttonFPStartupProceed"
            android:paddingLeft="2sp"
            android:background="@drawable/button_style"
...
