...
            <!--imp_q1-->
            <LinearLayout
                android:id="@+id/impCounselling1Layout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
...

                <RadioGroup
                    android:id="@+id/impCounselling1radioGroup"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
...

                    <RadioButton
                        android:id="@+id/impCounselling1radioButtonYes"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
...
            <!--imp_q2-->
            <LinearLayout
                android:id="@+id/impCounselling2Layout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
...

                <RadioGroup
                    android:id="@+id/impCounselling2radioGroup"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
...

                    <RadioButton
                        android:id="@+id/impCounselling2radioButtonYes"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
...
            <!--imp_q3-->
            <LinearLayout
                android:id="@+id/impCounselling3Layout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
...

                <RadioGroup
                    android:id="@+id/impCounselling3radioGroup"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
...

                    <RadioButton
                        android:id="@+id/impCounselling3radioButtonYes"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
...
            <!--imp_q4-->
            <LinearLayout
                android:id="@+id/impCounselling4Layout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
...

                <RadioGroup
                    android:id="@+id/impCounselling4radioGroup"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
...

                    <RadioButton
                        android:id="@+id/impCounselling4radioButtonYes"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
...
            <!--imp_q5-->
            <LinearLayout
                android:id="@+id/impCounselling5Layout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
...

                <RadioGroup
                    android:id="@+id/impCounselling5radioGroup"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
...

                    <RadioButton
                        android:id="@+id/impCounselling5radioButtonYes"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
...
            <!--imp_q6-->
            <LinearLayout
                android:id="@+id/impCounselling6Layout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
...

                <RadioGroup
                    android:id="@+id/impCounselling6radioGroup"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
...

                    <RadioButton
                        android:id="@+id/impCounselling6radioButtonYes"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
...
            <!--imp_q7-->
            <LinearLayout
                android:id="@+id/impCounselling7Layout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
...

                <RadioGroup
                    android:id="@+id/impCounselling7radioGroup"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
...

                    <RadioButton
                        android:id="@+id/impCounselling7radioButtonYes"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
...
            <!--iud q1-->
            <LinearLayout
                android:id="@+id/iudCounselling1Layout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
...

                <RadioGroup
                    android:id="@+id/iudCounselling1radioGroup"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
...

                    <RadioButton
                        android:id="@+id/iudCounselling1radioButtonYes"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
...
            <!--iud_q2-->
            <LinearLayout
                android:id="@+id/iudCounselling2Layout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
...

                <RadioGroup
                    android:id="@+id/iudCounselling2radioGroup"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
...

                    <RadioButton
                        android:id="@+id/iudCounselling2radioButtonYes"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
...

                    <RadioButton
                        android:id="@+id/iudCounselling3radioButtonYes"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
...
