...
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/ScrollFPClientInfo"
        android:fillViewport="true">

        <LinearLayout
            android:id="@+id/fp_clients_info_layout"
            android:orientation="vertical"
            android:layout_centerVertical="true"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <LinearLayout
...
                    android:layout_width="fill_parent"
                    android:textColor="#FFFFFF"
                    android:layout_height="wrap_content"
                    android:textSize="24sp" />
            </LinearLayout>

            <LinearLayout android:id="@+id/fpAnemia"
                android:layout_marginLeft="5sp"
                android:layout_marginRight="5sp"
                android:layout_marginTop="5sp"
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
...
                    android:text="@string/anemia_mandatory"
                    android:textSize="20sp"
                    android:layout_width="220sp"
                    android:layout_height="wrap_content"
                    android:textColor="@color/text_color"/>
                <Spinner
                    android:id="@+id/fpAnemiaSpinner"
                    android:inputType="text"
                    android:textSize="20sp"
                    android:paddingLeft="2sp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:entries="@array/Anemia_Dropdown_Full"
                    android:background="@drawable/gradient_spinner"/>
            </LinearLayout>

            <LinearLayout android:id="@+id/fpJaundiceLayout" android:layout_marginLeft="5sp"
                android:layout_marginRight="5sp"
                android:layout_marginTop="5sp"
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/layoutbordersimple"
...
                    android:text="@string/jaundice_mandatory"
                    android:textSize="20sp"
                    android:layout_width="220sp"
                    android:layout_height="wrap_content"
                    android:textColor="@color/text_color"/>
                <Spinner
                    android:id="@+id/fpJaundiceSpinner"
                    android:inputType="text"
                    android:textSize="20sp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="@drawable/gradient_spinner"
                    android:entries="@array/Jaundice_Edima_Dropdown"/>
            </LinearLayout>

            <LinearLayout
                android:id="@+id/fpBloodPressure"
                android:layout_marginLeft="5sp"
                android:layout_marginRight="5sp"
                android:layout_marginTop="5sp"
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
...
                    android:text="@string/blood_pressure_mandatory"
                    android:textSize="20sp"
                    android:layout_width="220sp"
                    android:layout_height="wrap_content"
                    android:textColor="@color/text_color"/>
                <EditText
                    android:id="@+id/fpBloodPressureValueSystolic"
                    android:inputType="number"
                    android:textSize="20sp"
                    android:paddingLeft="2sp"
                    android:layout_width="80sp"
                    android:layout_height="wrap_content"
                    android:maxLength="3"
...
                    android:text=" / "
                    android:textSize="20sp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="@color/text_color"/>
                <EditText
                    android:id="@+id/fpBloodPressureValueDiastolic"
                    android:inputType="number"
                    android:textSize="20sp"
                    android:paddingLeft="2sp"
                    android:layout_width="80sp"
                    android:layout_height="wrap_content"
                    android:maxLength="3"
                    android:background="@drawable/edittext_round"/>
            </LinearLayout>

            <LinearLayout
                android:id="@+id/fpBreastCondition"
                android:layout_marginLeft="5sp"
                android:layout_marginRight="5sp"
                android:layout_marginTop="5sp"
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
...
                    android:layout_height="wrap_content"
                    android:text="@string/breast_exam_mandatory"
                    android:textColor="@color/text_color"
                    android:textSize="20sp" />

                <Spinner
                    android:id="@+id/fpBreastConditionSpinner"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="5sp"
                    android:layout_marginBottom="5sp"
                    android:background="@drawable/gradient_spinner"
                    android:entries="@array/Injectable_Breast_Condition_DropDown"
...
                    android:textSize="25sp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="@color/text_color"/>
            </LinearLayout>

            <LinearLayout android:id="@+id/fpExamNextButtonLayout"
                android:layout_marginLeft="10sp"
                android:layout_marginTop="5sp"
                android:layout_marginBottom="10sp"
                android:orientation="horizontal"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content">

                <Button
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Next"
                    android:id="@+id/fpExamSubmitButton"
                    android:paddingRight="10sp"
                    android:paddingLeft="2sp"
                    android:background="@drawable/button_style"
                    android:layout_gravity="center_horizontal"/>

            </LinearLayout>
...
